* gear and runes now salvage for ore 1 rarity bellow, capped at common at the bottom.
* altered rarity drops
* fixed loot crates in maps having too high chance to drop maps.
* repair station now needs durability to repair times 3 to repair. 
* altered repair station fuel per ore rarity to be more in line with the actual craft value of the ores.
3.2.3
* magic shield now gets hurt by enviromental damage too. (this includes poison). Magic shield was a big issue because it was basically a way to negate TOO MANY mechanics. 
Enviromental damage, poison.. All things that are usually what causes deaths. I'll monitor the balance and maybe decrease how much damage is taken if it ends up being too weak because of the nerf.
* bolt spells now have no gravity and are slower
* switched righteous fury to be closer to ember page perks
* added new cleric spell, divine tribulation
3.2.2
* code tweaks, attempting to fix memory error that i'm not even sure is a problem
* torch should now auto equip with shift click like shields
* added strays to dungeon mobs
* some dungeon mobs now spawn with potion effects.
* rarity by default wont be shown on gears, this should reduce tooltip size a bunch
* added dev command to get out of dungeon
* should fix mobs getting stuck in walls in dungeons, big mobs like spiders can still get stuck though
* added new dungeon rooms
3.2.1
* removed the hacky thing to stop craft grid repair cus it caused server issues
3.2.0
* Added a config to enable automatic compatible item system. This is very experimental and i have no idea how accurate it is, but here's how it works.
I determine a power level of the item and then separate it into one of the categories: trash, normal and best.
Trash are low level gear that can't go above rare.
Normal can go up to nearly max level and can be legendary.
Best can go up to max level and be mythic.

Most items should fall in the normal category.