@@ -16,13 +16,17 @@ import com.robertx22.mine_and_slash.uncommon.interfaces.IAutoLocMultiLore;
 import com.robertx22.mine_and_slash.uncommon.interfaces.IAutoLocName;
 import com.robertx22.mine_and_slash.uncommon.interfaces.IWeighted;
 import com.robertx22.mine_and_slash.uncommon.interfaces.data_items.IRarity;
+import com.robertx22.mine_and_slash.uncommon.interfaces.data_items.ISalvagable;
 import com.robertx22.mine_and_slash.uncommon.interfaces.data_items.ITiered;
 import com.robertx22.mine_and_slash.uncommon.localization.Styles;
 import com.robertx22.mine_and_slash.uncommon.localization.Words;
+import com.robertx22.mine_and_slash.uncommon.utilityclasses.RandomUtils;
+import com.robertx22.mine_and_slash.uncommon.utilityclasses.RecipeUtils;
 import com.robertx22.mine_and_slash.uncommon.utilityclasses.TooltipUtils;
 import net.minecraft.client.util.ITooltipFlag;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
+import net.minecraft.util.math.MathHelper;
 import net.minecraft.util.text.ITextComponent;
 import net.minecraft.util.text.TextFormatting;
 import net.minecraft.world.World;
@@ -32,7 +36,7 @@ import net.minecraftforge.api.distmarker.OnlyIn;
 import javax.annotation.Nullable;
 import java.util.List;
 
-public abstract class CurrencyItem extends Item implements IAddsInstability, ISlashRegistryEntry<CurrencyItem>,
+public abstract class CurrencyItem extends Item implements IAddsInstability, ISlashRegistryEntry<CurrencyItem>, ISalvagable,
     ICurrencyItemEffect, IWeighted, ITiered, IAutoLocMultiLore, IAutoLocDesc, IAutoLocName, IAutoModel {
 
     public ItemType itemTypesUsableOn = ItemType.GEAR;
@@ -168,6 +172,32 @@ public abstract class CurrencyItem extends Item implements IAddsInstability, ISl
         }
         return 0;
 
+    }
+
+    @Override
+    public ItemStack getSalvageResult(float salvageBonus) {
+
+        ItemStack stack = RecipeUtils.getSalvageStack(this);
+
+        if (!stack.isEmpty()) {
+
+            int min = MathHelper.clamp(stack.getCount() / 4, 1, 64);
+            int max = MathHelper.clamp(stack.getCount() / 2, 1, 64);
+
+            min = tryIncreaseAmount(salvageBonus, min);
+            max = tryIncreaseAmount(salvageBonus, max);
+
+            int amount = RandomUtils.RandomRange(min, max);
+
+            stack.setCount(amount);
+        }
+
+        return stack;
+    }
+
+    @Override
+    public boolean isSalvagable(SalvageContext context) {
+        return true;
     }
 
 }
